--- a/pom.xml
+++ b/pom.xml
@@ -8,22 +8,27 @@
     <artifactId>grpc-tests</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <!--<grpc.version>0.14.0</grpc.version>-->
+        <grpc.version>1.0.0</grpc.version>
+        <file.encoding>UTF-8</file.encoding>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty</artifactId>
-            <version>0.14.0</version>
+            <version>${grpc.version}</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf</artifactId>
-            <version>0.14.0</version>
+            <version>${grpc.version}</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
-            <version>0.14.0</version>
+            <version>${grpc.version}</version>
         </dependency>
     </dependencies>
 
@@ -36,6 +41,15 @@
             </extension>
         </extensions>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.xolstice.maven.plugins</groupId>
                 <artifactId>protobuf-maven-plugin</artifactId>
